--- a/day_1/day_1.ipynb
+++ b/day_1/day_1.ipynb
@@ -6,12 +6,12 @@
    "metadata": {},
    "source": [
     "# Day 1\n",
-    "In this exercise, we will explore the capabilities of transformer-based models for natural language processing (NLP) using the Hugging Face (HF) `transformers` library. We will use the `sentence-transformers` package to extract features from text data and the `transformers` library to perform sentiment analysis and text generation tasks.\n",
+    "In this exercise, we will explore the capabilities of transformer-based models for natural language processing using the Hugging Face `transformers` library. We will use the `sentence-transformers` package to extract features from text data and the `transformers` library to perform sentiment analysis and text generation tasks.\n",
     "\n",
-    "By the end of this exercise, you will have learned how to:\n",
+    "By the end of this exercise, you will have learned the basics of how to:\n",
     "- Extract features from text data using transformer-based models\n",
-    "- Perform sentiment analysis on text data\n",
-    "- Generate text using transformer-based models\n"
+    "- Generate text using transformer-based models\n",
+    "- Perform sentiment analysis on text data\n"
    ]
   },
   {
@@ -23,17 +23,17 @@
    "source": [
     "## Using Notebook Environments \n",
     "1. To run a cell, press `shift + enter`. The notebook will execute the code in the cell and move to the next cell. If the cell contains a markdown cell (text only), it will render the markdown and move to the next cell.\n",
-    "2. Since cells can be executed in any order and variables can be over-written, you may at some point feel that you have lost track of the state of your notebook. If this is the case, you can always restart the kernel by clicking Runtime in the menu bar (if you're using Colab) and selecting `Restart runtime`. This will clear all variables and outputs.\n",
+    "2. Since cells can be executed in any order and variables can be over-written, you may at some point feel that you have lost track of the state of your notebook. If this is the case, you can always restart the kernel by clicking `Runtime` in the menu bar (if you're using Colab) and selecting `Restart runtime`. This will clear all variables and outputs.\n",
     "3. The final variable in a cell will be printed on the screen. If you want to print multiple variables, use the `print()` function as usual.\n",
     "\n",
-    "Notebook environments support code cells and markdown (text) cells. For the purposes of this workshop, markdown cells are used to provide high-level explanations of the code. More specific details are provided in the code cells themselves in the form of comments (lines beginning with `#`)"
+    "Notebook environments support code cells and markdown (text) cells. For the purposes of this workshop, markdown cells are used to provide high-level explanations of the code. More specific details are provided in the code cells themselves in the form of comments (lines beginning with `#`).\n",
+    "\n",
+    "**NOTE: Please only complete the BONUS TASKS at the end if you have finished everything else**."
    ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Environment Setup"
-   ],
+   "source": "## Environment Setup",
    "metadata": {
     "collapsed": false
    },
@@ -64,24 +64,37 @@
    "source": [
     "We begin by loading the requisite packages. For those coming from R, packages in Python are sometimes given shorter names for use in the code via the `import <name> as <nickname>` syntax (e.g. `import pandas as pd`). These are usually standardized nicknames. We here make use three packages:\n",
     "\n",
-    "1. `pandas`: A very popular package for reading and manipulating data in python.\n",
+    "1. `pandas`: A popular package for reading and manipulating data in python.\n",
     "2. `sentence_transformers`: A package for extracting features from text data using transformer-based models.\n",
-    "3. `transformers`: A HF package for loading and manipulating transformer-based models."
+    "3. `transformers`: A Hugging Face package for loading and manipulating transformer-based models."
    ]
   },
   {
    "cell_type": "code",
    "id": "267fad62d6f82855",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-12-09T11:59:46.504828Z",
+     "start_time": "2025-12-09T11:59:21.150199Z"
+    }
    },
    "source": [
     "import pandas as pd\n",
     "from sentence_transformers import SentenceTransformer\n",
     "from transformers import pipeline"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -92,7 +105,7 @@
    "source": [
     "## Feature Extraction\n",
     "\n",
-    "The following begins by extracting features (or embeddings) from the text data, which are numerical representations of the meaning of text, using the `sentence-transformers` package. To start, it uses three sentences that the code cell places in a list of strings. This list is provided as input to the model. \n",
+    "The following code begins by extracting features (or embeddings) from the text data, which are numerical representations of the meaning of text, using the `sentence-transformers` package. To start, it uses three sentences that are placed in a list of strings. This list is provided as input to the model.\n",
     "\n",
     "The code makes use of the `all-MiniLM-L6-v2` model, which is a small and efficient embedding model, to extract features from the sentences. The model will encode the sentences into 384-dimensional vector representations. The cell will then print the features as a pandas dataframe for easy viewing. \n",
     "\n",
@@ -134,9 +147,9 @@
    "source": [
     "**TASK 1**: Have a scroll through the features printed by the cell. Can you see that the features of the first two sentences are more similar to each other (i.e., have similar numerical values) than they are to the third sentence? Why do you think this is the case?\n",
     "\n",
-    "**TASK 2**: Try to add another sentence to the `sentences` list defined above. Use one of the existing sentences but replace one or two words with a synonym. For instance, you could change \"I feel *great* this morning\" to \"I feel *fantastic* this morning\". Then rerun the cell. What do you notice about the features of this new sentence compared to the original?\n",
+    "**TASK 2**: Try adding another sentence to the `sentences` list defined above by copying one of the existing sentences but replacing one or two words with a synonym. For instance, you could change \"I feel *great* this morning\" to \"I feel *fantastic* this morning\". Then rerun the cell. What do you notice about the features of this altered sentence compared to the original?\n",
     "\n",
-    "**Task 3 (BONUS)**: Compute a correlation matrix for the sentences (e.g. with [pd.DataFrame.corr](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.corr.html)). What might this matrix be useful for?"
+    "**BONUS TASK**: Try replacing `'all-MiniLM-L6-v2'` with another `sentence-transformers`-compatible model. You can find other compatible models [here](https://www.sbert.net/docs/sentence_transformer/pretrained_models.html#) (under 'Original Models'), along with details about their sizes and performances."
    ]
   },
   {
@@ -147,9 +160,9 @@
    },
    "source": [
     "## Text Generation\n",
-    "This section uses the `transformers` text generation pipeline. The cell below begins by loading the pipeline with the `gpt2` model, the smaller and open grandparent of ChatGPT.\n",
+    "This section uses the `transformers` text generation pipeline. The cell below begins by loading the pipeline with the `gpt2` model--the smaller and open great-grandparent of ChatGPT. **We use this model for introductory purposes only: GPT-2 is not used for serious applications nowadays, and we would not recommned doing so (you will soon see why).** It is nevertheless fun to play around with, and insightful to get an impression for how far langauge models have come in the last several years.\n",
     "\n",
-    "The cell then defines a prompt. The prompt is a starting point that the model uses to generate text. GPT-2 will use it to generate text that is likely to follow the prompt. We set the `max_length` parameter to 100 to limit the length of the generated text to 100 tokens.\n",
+    "The cell then defines a prompt. The prompt is a starting point that the model uses to generate text. GPT-2 will use it to generate text that is likely to follow the prompt. We set the `max_new_tokens` parameter to 100 to limit the length of the generated text to 100 tokens, and set 'return_full_text=False' so the output only contains the text generated by the model (i.e., excluding the prompt).\n",
     "\n",
     "Run the cell below."
    ]
@@ -158,24 +171,46 @@
    "cell_type": "code",
    "id": "cc96eb23af195ac2",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-12-09T12:00:26.526732Z",
+     "start_time": "2025-12-09T11:59:54.690979Z"
+    }
    },
    "source": [
-    "pipe = pipeline('text-generation', model='gpt2')\n",
+    "pipe = pipeline('text-generation', model='openai-community/gpt2')\n",
     "\n",
     "prompt = \"\"\"\n",
-    "    Once upon a time in a land far far away, there was a young prince named John. He was known for his bravery and courage. \n",
-    "    One day, he decided to go on an adventure to explore the unknown lands.\n",
+    "Once upon a time in a land far far away, there was a young prince named John.\n",
+    "He was known for his bravery and courage. One day, he decided to go on an adventure to explore the unknown lands.\n",
     "\"\"\"\n",
     "\n",
     "# Generate text based on the prompt\n",
-    "output = pipe(prompt, max_length=100)\n",
+    "output = pipe(prompt, max_new_tokens=100, return_full_text=False)\n",
     "\n",
     "# Print the generated text\n",
-    "output[0]['generated_text']"
+    "print(output[0]['generated_text'])"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use mps:0\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "He entered a desert field, the ancient stone ruins of the world.\n",
+      "In between the ruins was another man. To the great surprise of many people, he was nothing more than a handsome young man, the kind of young man to be taken aback when his father suddenly arrived.\n",
+      "This time, he was shocked to see that this young man wasn't only a young man from a noble village. He was also a boy named Lassan. He decided to embark on his travels, and to\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -184,9 +219,9 @@
     "collapsed": false
    },
    "source": [
-    "**TASK 1**: Please enter a new prompt in the variable `prompt` that you wish the model to continue generating text from. Feel free to play around with the `max_length` parameter to see how it affects the generated text.\n",
+    "**TASK 3**: Try changing the text in the variable `prompt` to a specific question that you wish the model to answer (e.g., `\"What is your name?\"`). Feel free to play around with the `max_new_tokens` parameter as well to prevent the output getting curtailed too early.\n",
     "\n",
-    "**TASK 2**: Try replacing `'gpt2'` above with `'gpt2-medium'` or another text generation model on the [HF model hub](https://huggingface.co/models) to see how the generated text changes. "
+    "**TASK 4**: Try replacing `'gpt2'` above with [`'Qwen/Qwen3-0.6B'`](https://huggingface.co/Qwen/Qwen3-0.6B) to see how the quality and style of the generated text improves (especially when responding to questions). Note that `'Qwen/Qwen3-0.6B'` is still small by LLM standards (we will try larger models later when we start using the GPU instead of the CPU, which we are currently using)."
    ]
   },
   {
@@ -197,9 +232,9 @@
    },
    "source": [
     "## Sentiment Analysis \n",
-    "In addition to feature extraction, Hugging Face's `transformers` library provides a high-level API for a variety of other tasks. These tasks can be viewed in the lef-hand panel under \"Natural Language Processing\" on the [HF model hub](https://huggingface.co/models). Many of these tasks include models that have been fine-tuned on specific datasets to perform well on the task at hand. As an example of such a task, we will now use the sentiment analysis pipeline to predict the sentiment of a few sentences.\n",
+    "In addition to feature extraction, Hugging Face's `transformers` library provides a high-level API for a variety of other tasks. These tasks can be viewed in the lef-hand panel under `Tasks > Natural Language Processing` on the [Hugging Face model hub](https://huggingface.co/models). Many of these tasks include models that have been fine-tuned on specific datasets to perform well on the task at hand. As an example of such a task, we will now use the `'text-classification'` pipeline to do sentiment classification on a few sentences.\n",
     "\n",
-    "The cell below will now load the `transformers` sentiment analysis pipeline to predict the sentiment of sentences for the same sentences as before.\n",
+    "The cell below will now load the `transformers` `'text-classification'` pipeline with [`'tabularisai/multilingual-sentiment-analysis'`](https://huggingface.co/tabularisai/multilingual-sentiment-analysis) to predict the sentiment of sentences for the same sentences as before.\n",
     "\n",
     "Run the cell below."
    ]
@@ -219,7 +254,7 @@
     "]\n",
     "\n",
     "# Load sentiment analysis pipeline\n",
-    "pipe = pipeline('sentiment-analysis', model='distilbert-base-uncased-finetuned-sst-2-english')\n",
+    "pipe = pipeline('text-classification', model='tabularisai/multilingual-sentiment-analysis')\n",
     "\n",
     "# Predict sentiment of the sentences\n",
     "sentiments = pipe(sentences)\n",
@@ -237,7 +272,9 @@
     "collapsed": false
    },
    "source": [
-    "As you can see, not only does the model predict the sentiment of the sentences (`'label'`), but it also provides a confidence score for each prediction (`'score'`). "
+    "As you can see, not only does the model predict the sentiment of the sentences (`'label'`), but it also provides a confidence score for each prediction (`'score'`).\n",
+    "\n",
+    "**TASK 5:** Try checking out the languages supported by the model on the [model card](https://huggingface.co/tabularisai/multilingual-sentiment-analysis) (under 'Model Details'). Use a translation software of your choice to translate the above sentences into another supported langauge. Do the sentiment labels remain roughly the same?"
    ]
   }
  ],
