use latest day_3a and b

--- a/day_3/day_3b.ipynb
+++ b/day_3/day_3b.ipynb
@@ -24,18 +24,10 @@
    "id": "e2d0673bbb432e4f"
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true,
-    "id": "initial_id",
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "outputId": "75d0aaf5-47d9-4b3b-ecba-e8b03b543a35"
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
     "import sys\n",
     "if 'google.colab' in sys.modules:  # If in Google Colab environment\n",
@@ -46,13 +38,16 @@
     "    # Install requisite packages\n",
     "    !pip install sentence_transformers &> /dev/null\n",
     "\n",
-    "    # Change working directory to day_3\n",
-    "    %cd /content/drive/MyDrive/LLM4BeSci_Ljubljana2025/day_3"
-   ]
+    "    # Change working directory to day_2\n",
+    "    %cd /content/drive/MyDrive/LLM4BeSci_Zurich2025/day_2"
+   ],
+   "id": "4ca55d1e773cd90b"
   },
   {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "import pandas as pd\n",
     "from sentence_transformers import SentenceTransformer\n",
@@ -60,11 +55,7 @@
     "from sklearn.linear_model import RidgeClassifierCV\n",
     "import seaborn as sns"
    ],
-   "metadata": {
-    "id": "5ee02d097856ee15"
-   },
-   "id": "5ee02d097856ee15",
-   "execution_count": null
+   "id": "dbdb3d3dfee06b4d"
   },
   {
    "cell_type": "markdown",
@@ -82,7 +73,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Reload test data from last last notebook (day_3a.ipynb)\n",
+    "# Reload test data from last notebook (day_3a.ipynb)\n",
     "media_bias_test = pd.read_csv('media_bias_test.csv')\n",
     "\n",
     "# Load training data\n",
@@ -206,7 +197,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "As you can see, feature extraction performs better than both zero-shot and few-shot classification from the last notebook. Why do you think this is? \n",
+    "As you can see, feature extraction slightly outperforms the vanilla zero-shot and few-shot classification from the last notebook. Why do you think this is?\n",
     "\n",
     "We can also visualize the confusion matrix:"
    ],
@@ -220,7 +211,7 @@
    "outputs": [],
    "source": [
     "# Confusion matrix\n",
-    "confusion = pd.crosstab(media_bias_test['bias'], ridge.predict(test_features))\n",
+    "confusion = pd.crosstab(media_bias_test['bias'], pd.Series(ridge.predict(test_features), name='pred'))\n",
     "sns.heatmap(confusion, annot=True)"
    ],
    "metadata": {
@@ -232,13 +223,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Compared to zero-shot and few-shot classification, the false positive to false negative ratio is more equal in this case, meaning that the classifier is more balanced in its predictions.\n",
+    "The feature extraction approach identifies slightly more neutral tweets as partisan (false positives) than it does partisan tweets as neutral (false negatives).\n",
     "\n",
     "**TASK 1:** Go to the [MTEB leaderboard](https://huggingface.co/spaces/mteb/leaderboard) and find a well-performing small model (i.e., high in the leaderboard, <1 billion parameters). Open the model card by clicking on the model, test whether the model can be run with `sentence-transformers` (by looking at the tags under the model name: there should be tag called `sentence-transformers`). Replace the `\"all-mpnet-base-v2\"` in the code above and re-run the analysis. Does the performance improve? \n",
     "\n",
-    "**TASK 2:** Try other similar models and compare. \n",
-    "\n",
-    "**TASK 3 (BONUS):** The current pipeline uses a single train-test split. Try using [k-fold cross-validation](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.cross_val_score.html) obtain a more reliable estimate of generalisation performance (hint: you will need to combine the training and test features and labels first). "
+    "**TASK 2:** The few shot performance measure we have so far been using is a single point estimate. Can you think of a way to get an uncertainty estimate on the test performance (e.g., a confidence interval)? Hint: Think along the lines of bootstrapping."
    ],
    "metadata": {
     "collapsed": false
