--- a/day_3/day_3a.ipynb
+++ b/day_3/day_3a.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "# Day 3a\n",
-    "In this notebook we will explore zero-shot and few-shot classification using a pre-trained LLM in the context of political bias classification. The goal will be to classify the tweets as either `\"neutral\"` or `\"partisan\"` using different classification techniques (zero-shot, few-shot, and feature extraction).  We will make use of a [dataset](https://www.kaggle.com/code/banddaniel/social-media-post-multiclass-classify-w-distilbert?select=political_media_dfe.csv) of tweets containing four columns:\n",
+    "In this notebook we will explore zero-shot and few-shot classification using a pre-trained LLM in the context of political bias classification. The goal will be to classify the tweets as either `\"neutral\"` or `\"partisan\"` using different prompting techniques (zero-shot, chain-of-thought, few-shot, etc.).  We will make use of a [dataset](https://www.kaggle.com/code/banddaniel/social-media-post-multiclass-classify-w-distilbert?select=political_media_dfe.csv) of tweets containing four columns:\n",
     "\n",
     "1. `\"author\"`: The author of the tweet.\n",
     "2. `\"text\"`: The text of the tweet.\n",
@@ -54,8 +54,8 @@
     "    # Installing requisite packages\n",
     "    !pip install transformers accelerate &> /dev/null\n",
     "\n",
-    "    # Change working directory to day_3\n",
-    "    %cd /content/drive/MyDrive/LLM4BeSci_Ljubljana2025/day_3"
+    "    # Change working directory\n",
+    "    %cd /content/drive/MyDrive/LLM4BeSci_Zurich2025/day_2"
    ],
    "outputs": [],
    "execution_count": null
@@ -67,7 +67,9 @@
     "from transformers import pipeline, AutoModelForCausalLM, AutoTokenizer\n",
     "import torch\n",
     "import seaborn as sns\n",
-    "from tqdm.notebook import tqdm_notebook as tqdm"
+    "from tqdm.notebook import tqdm_notebook as tqdm\n",
+    "import re\n",
+    "import numpy as np"
    ],
    "metadata": {
     "id": "5ee02d097856ee15"
@@ -111,7 +113,7 @@
    "source": [
     "The code next loads the causal LLM and its corresponding tokenizer. We will use [`\"meta-llama/Llama-3.2-3B-Instruct\"`](https://huggingface.co/meta-llama/Llama-3.2-3B-Instruct), a recent model trained which shows impressive performance given its relatively small size. The smaller size has the main advantage that it can be run on the freely available GPUs on Google Colab. \n",
     "\n",
-    "The code begins by setting the random seed. This helps ensure the reproducibility of the often stochastic processes involved in training and running LLMs. **It next asks you to provide your [Hugging Face access token](https://huggingface.co/settings/tokens). You will need to generate this by .... which you will need to copy-paste in order to download the model.** The code then loads the model and tokenizer. The model is loaded onto the GPU via `device_map=\"cuda\"` and the model is set to use half-precision via `torch_dtype=torch.float16` to save memory (RAM). The `trust_remote_code=True` argument is used to trust the remote code, and `attn_implementation='eager'` is used for faster inference on the T4 GPUs available on Google Colab."
+    "The code begins by setting the random seed. This helps ensure the reproducibility of the often stochastic processes involved in training and running LLMs. **It next asks you to provide your Hugging Face access token**. To generate this, navigate to [your Hugging Face profile settings](https://huggingface.co/settings/tokens), click `+Create new token`, set `Toke type` to `Read`, and give it a name (e.g., 'LLM4BeSci'). You can then copy-paste it below. The code then loads the model and tokenizer. The model is loaded onto the GPU via `device_map=\"cuda\"` and the model is set to use half-precision via `torch_dtype=torch.float16` to save memory (RAM). The `trust_remote_code=True` argument is used to trust the remote code, and `attn_implementation='eager'` is used for faster inference on the T4 GPUs available on Google Colab."
    ],
    "metadata": {
     "collapsed": false
@@ -123,22 +125,23 @@
    "source": [
     "torch.random.manual_seed(42) # For reproducibility\n",
     "\n",
-    "access_token = '<your access token here>'\n",
+    "access_token = 'your access token here'\n",
     "\n",
     "# Load the model\n",
+    "model_ckpt = \"meta-llama/Llama-3.2-3B-Instruct\"\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
-    "    \"meta-llama/Llama-3.2-3B-Instruct\",\n",
+    "    model_ckpt,\n",
     "    device_map=\"cuda\", # Use GPU\n",
-    "    torch_dtype=torch.float16, # Use half-precision\n",
+    "    dtype=torch.float16, # Use half-precision\n",
     "    trust_remote_code=True,\n",
     "    attn_implementation='eager', # For faster inference on T4 GPUs\n",
-    "    use_auth_token=access_token\n",
+    "    token=access_token\n",
     ")\n",
     "\n",
     "# Load the tokenizer\n",
     "tokenizer = AutoTokenizer.from_pretrained(\n",
-    "    \"meta-llama/Llama-3.2-3B-Instruct\",\n",
-    "    use_auth_token=access_token,\n",
+    "    model_ckpt,\n",
+    "    token=access_token,\n",
     ")"
    ],
    "metadata": {
@@ -341,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "source": "Since we only want the model to output either `\"neutral\"` or `\"partisan\"`, the code provides a hard constraint on the generation by setting `\"max_new_tokens\": 10` and `\"do_sample\": False`. This is done in the `generation_args` dictionary, which is later feed into the text generation `pipe`. It also sets `\"temperature\"` and `\"top_p\"` to `None`, since these parameters do not apply when `do_sample=False`. The `pad_token_id` is set to the end-of-sequence token ID, which is recommended when using the Hugging Face pipeline for text generation. As a final piece of setup, we also add a soft constraint by prompting the model to `\"Strictly answer with only 'neutral' or 'partisan'\"`:",
+   "source": "Since we only want the model to output either `\"neutral\"` or `\"partisan\"`, the code provides a hard constraint on the generation by setting `\"max_new_tokens\": 10` and `\"do_sample\": False`. This is done in the `generation_args` dictionary, which is later fed into the text generation `pipe`. It also sets `\"temperature\"` and `\"top_p\"` to `None`, since these parameters do not apply when `do_sample=False`. The `pad_token_id` is set to the end-of-sequence token ID, which is recommended when using the Hugging Face pipeline for text generation.",
    "metadata": {
     "collapsed": false
    },
@@ -357,26 +360,39 @@
     "    \"do_sample\": False,\n",
     "    \"temperature\": None,\n",
     "    \"top_p\": None,\n",
-    "    \"pad_token_id\": pipe.tokenizer.eos_token_id\n",
-    "}\n",
-    "\n",
-    "zero_shot_prompt = \"Is this text neutral or partisan? Strictly answer with only 'neutral' or 'partisan':\\n\""
+    "    \"pad_token_id\": pipe.tokenizer.eos_token_id,\n",
+    "    # \"use_cache\": False  # Only uncomment this line if you are using \"microsoft/Phi-3.5-mini-instruct\"\n",
+    "}"
    ],
+   "metadata": {},
+   "id": "2f0e675d66880247",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "The code next initializes our `zero_shot_prompt`. We use curly braces `{}` as a template into which we can later add each tweet (via Python's string `.format()` method. We also prompt the model to `\"Strictly answer with only *neutral* or *partisan*, making sure to return your answer between single asteriks for easy automated extraction.\"`. This makes it easier to extract the model's exact answer later on via a regular expression (in our `extract_label()` function below).",
+   "id": "f287e6ab43cdb8ac"
+  },
+  {
    "metadata": {
     "collapsed": false
    },
-   "id": "c9d53e4f555dd5fd",
+   "cell_type": "code",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "zero_shot_prompt = \"Is this text neutral or partisan?:\\n{}\\nStrictly answer with only *neutral* or *partisan*, making sure to return your answer between single asteriks for easy automated extraction.\"",
+   "id": "c9d53e4f555dd5fd"
   },
   {
    "cell_type": "markdown",
    "source": [
     "The code then iterates through each tweet in the test set, and generates a classification label using the zero-shot prompt. For each tweet, it:\n",
     "\n",
-    "1. Concatenates the zero-shot prompt with the tweet text.\n",
-    "2. Passes the concatenated text to the pipeline in the required json format.\n",
-    "3. Extracts the generated text from the output by checking for the presence of `\"neutral\"` or `\"partisan\"`."
+    "1. Formats the zero-shot prompt with the tweet text (adding the text between the `{}`).\n",
+    "2. Passes the formatted text to the pipeline in the required json format.\n",
+    "3. Extracts the generated text from the output by checking for the presence of `\"*neutral*\"` or `\"*partisan*\"`."
    ],
    "metadata": {
     "collapsed": false
@@ -386,19 +402,32 @@
   {
    "cell_type": "code",
    "source": [
+    "def extract_label(s):\n",
+    "  \"\"\"Extracts the answer from within asterisks.\"\"\"\n",
+    "  match = re.search(r'\\*(.*?)\\*', s)\n",
+    "  return match.group(1) if match else np.nan\n",
+    "\n",
+    "\n",
     "zero_shot_labels = []\n",
     "for tweet in tqdm(media_bias_test['text']):\n",
-    "    # Concatenate zero-shot prompt with tweet\n",
-    "    message = [{\"role\": \"user\", \"content\": zero_shot_prompt + tweet}]  \n",
+    "    # Format the zero-shot prompt with tweet\n",
+    "    message = [\n",
+    "        # {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},  # Uncomment this line to use the system prompt\n",
+    "        {\"role\": \"user\", \"content\": zero_shot_prompt.format(tweet)}\n",
+    "    ]\n",
     "    \n",
     "    # Generate text and access output at index 0 at key 'generated_text'    \n",
     "    output = pipe(message, **generation_args)[0]['generated_text'].lower() \n",
     "    \n",
     "    # Extract label and append to list\n",
-    "    label = 'neutral' if 'neutral' in output else 'partisan' if 'partisan' in output else 'nan' \n",
+    "    label = extract_label(output)\n",
     "    zero_shot_labels.append(label)\n",
     "\n",
     "media_bias_test['zero_shot_label'] = zero_shot_labels\n",
+    "\n",
+    "# Check if all values labels were successfully extracted\n",
+    "print(f\"Your labels contain {media_bias_test['zero_shot_label'].isna().sum()} NaN values\")\n",
+    "\n",
     "media_bias_test"
    ],
    "metadata": {
@@ -456,9 +485,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Impressively, without any task-specific training, the model achieves an accuracy of 72%. This compares to a baseline accuracy of 50% that could be achieved by randomly guessing between the two classes.\n",
+    "Impressively, without any task-specific training, the model achieves an accuracy of 71%. This compares to a baseline accuracy of 50% that could be achieved by randomly guessing between the two classes.\n",
     "\n",
-    "The results can also visualised with a confusion matrix, which shows the number of true positives, true negatives, false positives, and false negatives. The confusion matrix can be used to identify where the model is making mistakes and to understand the types of errors."
+    "The results can also visualised with a confusion matrix, which shows the number of true positives, true negatives, false positives, and false negatives. The confusion matrix can be used to identify where the model is making mistakes."
    ],
    "metadata": {
     "collapsed": false
@@ -486,11 +515,23 @@
   },
   {
    "cell_type": "markdown",
-   "source": "When interpreting the confusion matrix, it is important to be aware of the fact that the number of `\"neutral\"` and `\"partisan\"` tweets are (intentionally) balanced in our dataset. As illustrated, the model incorrectly classifies partisan tweets as neutral (false negatives) more often than it incorrectly classifies neutral tweets as partisan (false positives). In other words, it is overly \"cautious\" in classifying tweets as partisan.",
+   "source": "When interpreting the confusion matrix, it is important to be aware of the fact that the number of `\"neutral\"` and `\"partisan\"` tweets are (intentionally) balanced in our dataset. As illustrated, the model classifies more partisan tweets as neutral (false negatives) than neutral tweets as partisan (false positives), though the difference is not huge.",
    "metadata": {
     "collapsed": false
    },
    "id": "aeffbd244d6879de"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "**TASK 1**: Try adding the default \"You are a helpful assistant\" system prompt by uncommenting the first line of code in `message`. Feel free to write your own system prompt (e.g., \"You are a political scientist who studies media bias.\")\n",
+    "\n",
+    "**Task 2**: Try editing the `zero_shot_prompt` to include more information about the task and see how it affects the classification accuracy. For instance, explain what the model should look out for in neutral versus partisan tweets.\n",
+    "\n",
+    "**Task 3:** Before having the model return its final answer, ask for it to go through its reasoning step-by-step. This prompting strategy is known as *chain-of-thought*, and can often improve model performance. You will also need to increase `\"max_new_tokens\"` (e.g., to `100`) in the `generation_args`, since the model will need more space to do its \"reasoning\".**"
+   ],
+   "id": "344d644f3fd868a3"
   },
   {
    "cell_type": "markdown",
@@ -509,6 +550,17 @@
   {
    "cell_type": "code",
    "source": [
+    "# Resetting generation arguments to what we started with\n",
+    "generation_args = {\n",
+    "    \"max_new_tokens\": 10,\n",
+    "    \"return_full_text\": False,\n",
+    "    \"do_sample\": False,\n",
+    "    \"temperature\": None,\n",
+    "    \"top_p\": None,\n",
+    "    \"pad_token_id\": pipe.tokenizer.eos_token_id,\n",
+    "    # \"use_cache\": False  # Only uncomment this line if you are using \"microsoft/Phi-3.5-mini-instruct\"\n",
+    "}\n",
+    "\n",
     "# Defining the number of examples (shots)\n",
     "n_shots = 10\n",
     "\n",
@@ -522,7 +574,7 @@
     "few_shot_prompt = (\n",
     "        \"Based on the following texts and labels:\\n\\n\" +\n",
     "        '\\n'.join(('Text: ' + stratified_examples['text'] + '\\nLabel: ' + stratified_examples['bias']).iloc[:n_shots] + '\\n') +\n",
-    "        \"\\n\\nClassify the following texts. Strictly answer with only the labels 'neutral' or 'partisan':\\n\\n\"\n",
+    "        \"\\n\\nClassify the following text:\\n{}\\nStrictly answer with only *neutral* or *partisan*, making sure to return your answer between single asteriks for easy automated extraction.\"\n",
     ")\n",
     "\n",
     "print(few_shot_prompt)"
@@ -540,9 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "The code next classifies the remaining tweets using the few-shot prompt. First, we drop the few shot examples used to prompt the model from the test set. Next, the few-shot prompt is concatenated with each tweet text and saved to a new column of `media_bias_test` named `\"few_shot_text\"`. The model is then again used to generate the classification label for each tweet, this time using the few-shot prompt. The predicted labels are saved to a new column of `media_bias_test` named `\"few_shot_label\"`."
-   ],
+   "source": "The code next classifies the remaining tweets using the few-shot prompt. First, we drop the few shot examples used to prompt the model from the test set. Next, the few-shot prompt is formatted with each tweet text and saved to a new column of `media_bias_test` named `\"few_shot_text\"`. The model is then again used to generate the classification label for each tweet, this time using the few-shot prompt. The predicted labels are saved to a new column of `media_bias_test` named `\"few_shot_label\"`.",
    "metadata": {
     "collapsed": false
    },
@@ -554,15 +604,12 @@
     "# Dropping few_shot examples from test set\n",
     "media_bias_test = media_bias_test.iloc[n_shots//2: -n_shots//2]\n",
     "\n",
-    "# Editing headlines to include few-shot prompt\n",
-    "media_bias_test['few_shot_text'] = few_shot_prompt + media_bias_test['text']\n",
-    "\n",
     "# Classify all news articles\n",
     "few_shot_label = []\n",
-    "for tweet in tqdm(media_bias_test['few_shot_text']):\n",
-    "    message = [{\"role\": \"user\", \"content\": tweet}]\n",
+    "for tweet in tqdm(media_bias_test['text']):\n",
+    "    message = [{\"role\": \"user\", \"content\": few_shot_prompt.format(tweet)}]\n",
     "    output = pipe(message, **generation_args)[0]['generated_text'].lower()\n",
-    "    label = 'neutral' if 'neutral' in output else 'partisan' if 'partisan' in output else 'nan'\n",
+    "    label = extract_label(output)\n",
     "    few_shot_label.append(label)\n",
     "\n",
     "# Add few-shot labels to dataframe\n",
@@ -622,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "source": "The few-shot accuracy is in fact slightly lower than the zero-shot accuracy, [as can sometimes be the case](https://dl.acm.org/doi/abs/10.1145/3411763.3451760). We can also visualize the confusion matrix:",
+   "source": "The few-shot accuracy is in fact slightly better than the vanilla zero-shot we tried earlier (it's worth keeping in mind that this is not always the case, and few-shot [can sometimes be lower than the zero-shot accuracy](https://dl.acm.org/doi/abs/10.1145/3411763.3451760)). We can also visualize the confusion matrix:",
    "metadata": {
     "collapsed": false
    },
@@ -646,20 +693,6 @@
    "id": "iVpew1EXj3xL",
    "outputs": [],
    "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Although the few-shot model performs slightly worse, the pattern of errors remains roughly the same. The model still incorrectly classifies partisan tweets as neutral (false negatives) more often than it incorrectly classifies neutral tweets as partisan (false positives).\n",
-    "\n",
-    "**Task 1:** Try editing the few-shot setting to include different numbers for `n_shots` (e.g., `8`, `12`) and see how it affects the classification accuracy. \n",
-    "\n",
-    "**Task 2:** Try editing the few-shot prompt to include more information about the task and see how it affects the classification accuracy. For instance, explain what the model should look out for in neutral versus partisan tweets."
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "de5f8f9085321567"
   }
  ],
  "metadata": {
