--- a/day_3/day_3b.ipynb
+++ b/day_3/day_3b.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "# Day 3b\n",
-    "In this notebook, we will continue with tweet bias classification. However, we will now use feature extraction instead of zero-/few-shot classification. We will use the `SentenceTransformer` library to extract features from the text, and then use a `RidgeClassifierCV` to classify the tweets. We will train the classifier on some additional training data (`media_bias_train`) and evaluate it on the same data as day_3a (`media_bias_test`)."
+    "In this notebook, we will continue with tweet bias classification. However, we will now use feature extraction instead of zero-/few-shot classification. We will use the `SentenceTransformer` library to extract features from the text, and then use a `RidgeClassifierCV` to classify the tweets. We will train the classifier on some additional training data (`media_bias_train`) and evaluate it on the same data as the previous exercise (`media_bias_test`)."
    ],
    "metadata": {
     "collapsed": false
