--- a/day_3/day_3c.ipynb
+++ b/day_3/day_3c.ipynb
@@ -9,235 +9,6 @@
    },
    "source": [
     "# Day 3c\n",
-    "In this notebook, we will continue with tweet bias classification. However, we will now use feature extraction instead of zero-/few-shot classification. We will use the `SentenceTransformer` library to extract features from the text, and then use a `RidgeClassifierCV` to classify the tweets. We will train the classifier on some additional training data (`media_bias_train`) and evaluate it on the same data as day_3a (`media_bias_test`)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e2d0673bbb432e4f",
-   "metadata": {
-    "collapsed": false,
-    "id": "e2d0673bbb432e4f"
-   },
-   "source": [
-    "## Environment Setup\n",
-    "Make sure to set your runtime back to using CPU by going to `Runtime` -> `Change runtime type` -> `Hardware accelerator` -> `CPU`. This will save you some GPU hours."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "collapsed": true,
-    "id": "initial_id",
-    "outputId": "20c32f75-3fd7-415f-b30f-8cadb2827a48"
-   },
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "if 'google.colab' in sys.modules:  # If in Google Colab environment\n",
-    "    # Mount google drive to enable access to data files\n",
-    "    from google.colab import drive\n",
-    "    drive.mount('/content/drive')\n",
-    "\n",
-    "    # Install requisite packages\n",
-    "    !pip install sentence_transformers &> /dev/null\n",
-    "\n",
-    "    # Change working directory to day_3\n",
-    "    %cd /content/drive/MyDrive/LLM4BeSci_Ljubljana2026/day_3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ee02d097856ee15",
-   "metadata": {
-    "id": "5ee02d097856ee15"
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from sentence_transformers import SentenceTransformer\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import RidgeClassifierCV\n",
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bde917b91e26fd55",
-   "metadata": {
-    "collapsed": false,
-    "id": "bde917b91e26fd55"
-   },
-   "source": [
-    "## Feature Extraction\n",
-    "The code begins by loading the data as `pandas.DataFrame` objects."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f06a2fe2cf2038d",
-   "metadata": {
-    "id": "6f06a2fe2cf2038d"
-   },
-   "outputs": [],
-   "source": [
-    "# Reload test data from last last notebook (day_3a.ipynb)\n",
-    "media_bias_test = pd.read_csv('media_bias_test.csv')\n",
-    "\n",
-    "# Load training data\n",
-    "media_bias_train = pd.read_csv('media_bias_train.csv')\n",
-    "media_bias_train"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "37a9bca646cd9146",
-   "metadata": {
-    "collapsed": false,
-    "id": "37a9bca646cd9146"
-   },
-   "source": [
-    "Note the considerable increase in the number of training samples. The code then next initializes the `SentenceTransformer` model `'all-mpnet-base-v2'` and extracts features from the training data using the `encode` method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c60ffe89614a76f",
-   "metadata": {
-    "id": "8c60ffe89614a76f"
-   },
-   "outputs": [],
-   "source": [
-    "# Initialize feature extraction pipeline\n",
-    "model = SentenceTransformer('all-mpnet-base-v2')\n",
-    "\n",
-    "# Extract features\n",
-    "train_features = model.encode(media_bias_train['text'])\n",
-    "train_features"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2cc1bca83056a9f4",
-   "metadata": {
-    "collapsed": false,
-    "id": "2cc1bca83056a9f4"
-   },
-   "source": [
-    "\n",
-    "The features are then standardised before being fed into `RidgeClassifierCV`. This is crucial, since `RidgeClassifierCV` uses l2 (ridge) regularisation to prevent over-fitting, which assumes that the features have the same scaling. The classifier is then trained on the training data using the `fit` method. Note that `RidgeClassifierCV` will automatically perform cross-validation on the training data to find the best alpha value from the list of `alphas` provided. Performance on the training data is then evaluated using the `score` method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "isODrTlzhp5E",
-   "metadata": {
-    "id": "isODrTlzhp5E"
-   },
-   "outputs": [],
-   "source": [
-    "# Standardize features\n",
-    "scaler = StandardScaler()\n",
-    "scaler.fit(train_features)\n",
-    "features = scaler.transform(train_features)\n",
-    "\n",
-    "# Initialize classifier\n",
-    "ridge = RidgeClassifierCV(alphas=[1e-3, 1e-2, 1e-1, 1, 10, 100])\n",
-    "\n",
-    "# Train classifier\n",
-    "ridge.fit(train_features, media_bias_train['bias'])\n",
-    "f\"Train accuracy: {ridge.score(train_features, media_bias_train['bias'])}\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6534cd57d8073d56",
-   "metadata": {
-    "collapsed": false,
-    "id": "6534cd57d8073d56"
-   },
-   "source": [
-    "Features are next extracted for the test set and standardised using the same `StandardScaler` object that was fitted on the training data to prevent data leakage. The classifier is then evaluated on the test data using the `score` method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2814c31f5ab1686",
-   "metadata": {
-    "id": "f2814c31f5ab1686"
-   },
-   "outputs": [],
-   "source": [
-    "# Extract features for test set\n",
-    "test_features = model.encode(media_bias_test['text'])\n",
-    "\n",
-    "# Standardising features\n",
-    "test_features = scaler.transform(test_features)\n",
-    "\n",
-    "# Test classifier\n",
-    "f\"Test accuracy: {ridge.score(test_features, media_bias_test['bias'])}\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b6d71a280d578bcd",
-   "metadata": {
-    "collapsed": false,
-    "id": "b6d71a280d578bcd"
-   },
-   "source": [
-    "As you can see, feature extraction outperforms zero-shot and few-shot classification from the last notebook. Why do you think this is?\n",
-    "\n",
-    "We can also visualize the confusion matrix:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "738e5d8eb936d057",
-   "metadata": {
-    "id": "738e5d8eb936d057"
-   },
-   "outputs": [],
-   "source": [
-    "# Confusion matrix\n",
-    "confusion = pd.crosstab(media_bias_test['bias'], ridge.predict(test_features))\n",
-    "sns.heatmap(confusion, annot=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4de852e7f71c942f",
-   "metadata": {
-    "collapsed": false,
-    "id": "4de852e7f71c942f"
-   },
-   "source": [
-    "Like with few-shot, the feature extraction approach identifies more neutral tweets as partisan (false positives) than it does partisan tweets as neutral (false negatives).\n",
-    "\n",
-    "**TASK 1:** Go to the [MTEB leaderboard](https://huggingface.co/spaces/mteb/leaderboard) and find a well-performing small model (i.e., high in the leaderboard, <1 billion parameters). Open the model card by clicking on the model, test whether the model can be run with `sentence-transformers` (by looking at the tags under the model name: there should be tag called `sentence-transformers`). Replace the `\"all-mpnet-base-v2\"` in the code above and re-run the analysis. Does the performance improve?\n",
-    "\n",
-    "**TASK 2:** The few shot performance measure we have so far been using is a single point estimate. Can you think of a way to get an uncertainty estimate on the test performance (e.g., a confidence interval)? Hint: Think along the lines of bootstrapping."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "jnefIZpf2DyN",
-   "metadata": {
-    "id": "jnefIZpf2DyN"
-   },
-   "source": [
-    "##**BONUS - LoRA Fine-Tuning (MiniLM)**\n",
     "\n",
     "So far, we have treated the language model as a fixed feature extractor:\n",
     "the model produces embeddings, and all task learning happens in a separate, linear classifier.\n",
@@ -252,7 +23,19 @@
     "\n",
     "LoRA inserts small, trainable low-rank matrices into the model’s attention layers, keeps the original pretrained weights frozen, and updates less than 1% of the total parameters.\n",
     "\n",
-    "This keeps training fast and lightweight, while still allowing task-specific learning.\n"
+    "This keeps training fast and lightweight, while still allowing task-specific learning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2d0673bbb432e4f",
+   "metadata": {
+    "collapsed": false,
+    "id": "e2d0673bbb432e4f"
+   },
+   "source": [
+    "## Environment Setup\n",
+    "Make sure to set your runtime back to using CPU by going to `Runtime` -> `Change runtime type` -> `Hardware accelerator` -> `CPU`. This will save you some GPU hours."
    ]
   },
   {
@@ -282,6 +65,10 @@
    "source": [
     "import sys\n",
     "if 'google.colab' in sys.modules:\n",
+    "    # Mount google drive to enable access to data files\n",
+    "    from google.colab import drive\n",
+    "    drive.mount('/content/drive')\n",
+    "\n",
     "    !pip -q install transformers datasets evaluate accelerate peft\n",
     "\n",
     "import numpy as np\n",
