--- a/day_3/day_3c.ipynb
+++ b/day_3/day_3c.ipynb
@@ -23,7 +23,9 @@
     "\n",
     "LoRA inserts small, trainable low-rank matrices into the model’s attention layers, keeps the original pretrained weights frozen, and updates less than 1% of the total parameters.\n",
     "\n",
-    "This keeps training fast and lightweight, while still allowing task-specific learning."
+    "This keeps training fast and lightweight, while still allowing task-specific learning.\n",
+    "\n",
+    "**Credits**: We would like to thank [Taisiia Tikhomirova](https://www.mpib-berlin.mpg.de/staff/taisiia-tikhomirova) and [Valentin Kriegmair](https://www.mpib-berlin.mpg.de/person/valentin-kriegmair/171978) for their help in creating this exercise."
    ]
   },
   {
@@ -35,7 +37,7 @@
    },
    "source": [
     "## Environment Setup\n",
-    "Make sure to set your runtime back to using CPU by going to `Runtime` -> `Change runtime type` -> `Hardware accelerator` -> `CPU`. This will save you some GPU hours."
+    "Make sure to set your runtime to use a GPU by going to `Runtime` -> `Change runtime type` -> `Hardware accelerator` -> `T4 GPU`"
    ]
   },
   {
@@ -71,14 +73,11 @@
     "\n",
     "    !pip -q install transformers datasets evaluate accelerate peft\n",
     "\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import torch\n",
-    "import transformers\n",
-    "\n",
-    "print(\"torch:\", torch.__version__)\n",
-    "print(\"transformers:\", transformers.__version__)\n",
-    "print(\"cuda available:\", torch.cuda.is_available())"
+    "from datasets import Dataset\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "from peft import LoraConfig, get_peft_model, TaskType\n",
+    "import evaluate"
    ]
   },
   {
@@ -108,35 +107,56 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7feGCJTD2A1B",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 161
-    },
-    "id": "7feGCJTD2A1B",
-    "outputId": "5959453a-d43f-4205-896c-e4614356fbd9"
-   },
-   "outputs": [],
+   "metadata": {},
    "source": [
     "# 1. Load Data\n",
-    "train_df = pd.read_csv(\"media_bias_train.csv\")\n",
-    "test_df  = pd.read_csv(\"media_bias_test.csv\")\n",
+    "media_bias_train = pd.read_csv(\"media_bias_train.csv\")\n",
+    "media_bias_test  = pd.read_csv(\"media_bias_test.csv\")\n",
     "\n",
+    "media_bias_train"
+   ],
+   "outputs": []
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "We create a dictionary to map string labels to integers and vice versa.",
+   "id": "816966f8213c2fab"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
     "# 2. Prepare Label Mappings\n",
-    "# We create a dictionary to map string labels to integers and vice versa.\n",
-    "label_names = sorted(train_df[\"bias\"].unique())\n",
+    "label_names = sorted(media_bias_train[\"bias\"].unique())\n",
     "label2id = {name: i for i, name in enumerate(label_names)}\n",
-    "id2label = {i: name for name, i in label2id.items()}\n",
-    "\n",
+    "id2label = {i: name for name, i in label2id.items()}"
+   ],
+   "id": "44de16d7ec499572",
+   "outputs": []
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "We create a new column 'label' which the Trainer specifically looks for by default",
+   "id": "16d0145f0def4cc0"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
     "# 3. Apply mapping to DataFrames\n",
-    "# We create a new column 'label' which the Trainer specifically looks for by default\n",
-    "train_df[\"label\"] = train_df[\"bias\"].map(label2id)\n",
-    "test_df[\"label\"]  = test_df[\"bias\"].map(label2id)\n",
+    "media_bias_train[\"label\"] = media_bias_train[\"bias\"].map(label2id)\n",
+    "media_bias_test[\"label\"]  = media_bias_test[\"bias\"].map(label2id)\n",
     "\n",
     "# Quick check\n",
     "print(label2id)\n",
-    "train_df.head(3)"
-   ]
+    "media_bias_train.head(3)"
+   ],
+   "id": "1374ef4e868cdb7d"
   },
   {
    "cell_type": "markdown",
@@ -144,19 +164,7 @@
    "metadata": {
     "id": "glYKy71h2U1-"
    },
-   "source": [
-    "## Tokenization\n",
-    "\n",
-    "Transformer models cannot read raw text directly.\n",
-    "Instead, they rely on a built-in tokenizer that converts text into a numerical representation.\n",
-    "\n",
-    "Here, we simply:\n",
-    "- pass each text through the tokenizer,\n",
-    "- let it take care of formatting details internally,\n",
-    "- and ensure texts are not too long for the model.\n",
-    "\n",
-    "No manual feature engineering is needed — the model handles this step for us.\n"
-   ]
+   "source": "## Tokenization"
   },
   {
    "cell_type": "code",
@@ -172,9 +180,6 @@
    },
    "outputs": [],
    "source": [
-    "from datasets import Dataset\n",
-    "from transformers import AutoTokenizer\n",
-    "\n",
     "# Define the base model - MiniLM (a small BERT-based model) to fit in memory/compute constraints\n",
     "base_model_name = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
     "\n",
@@ -186,8 +191,8 @@
     "    return tokenizer(batch[\"text\"], truncation=True, max_length=256, padding = \"max_length\")\n",
     "\n",
     "# Convert Pandas DataFrames to Hugging Face Datasets\n",
-    "train_ds = Dataset.from_pandas(train_df[[\"text\", \"label\"]])\n",
-    "test_ds  = Dataset.from_pandas(test_df[[\"text\", \"label\"]])\n",
+    "train_ds = Dataset.from_pandas(media_bias_train[[\"text\", \"label\"]])\n",
+    "test_ds  = Dataset.from_pandas(media_bias_test[[\"text\", \"label\"]])\n",
     "\n",
     "# Apply tokenization\n",
     "# We remove the 'text' column because the model only needs the numerical 'input_ids'\n",
@@ -250,15 +255,13 @@
    },
    "outputs": [],
    "source": [
-    "from transformers import AutoModelForSequenceClassification\n",
-    "from peft import LoraConfig, get_peft_model, TaskType\n",
-    "\n",
     "# Load the base model\n",
     "model = AutoModelForSequenceClassification.from_pretrained(\n",
     "    base_model_name,\n",
     "    num_labels=len(label_names),\n",
     "    id2label=id2label,\n",
     "    label2id=label2id,\n",
+    "    device_map=\"cuda\"\n",
     ")\n",
     "\n",
     "# LoRA Configuration\n",
@@ -421,8 +424,6 @@
    },
    "outputs": [],
    "source": [
-    "import evaluate\n",
-    "\n",
     "# Load a standard accuracy metric\n",
     "accuracy_metric = evaluate.load(\"accuracy\")\n",
     "\n",
@@ -471,6 +472,7 @@
     "    num_labels=len(label_names),\n",
     "    id2label=id2label,\n",
     "    label2id=label2id,\n",
+    "    device_map=\"cuda\"\n",
     ")\n",
     "\n",
     "# Create a Trainer for the base (not fine-tuned) model\n",
@@ -485,7 +487,7 @@
     "# Run evaluation\n",
     "base_metrics = base_trainer.evaluate()\n",
     "\n",
-    "# Print baseline accuracy\n",
+    "# Print baseline accuracy (random model)\n",
     "print(\"Accuracy before fine-tuning:\", base_metrics[\"eval_accuracy\"])\n"
    ]
   },
@@ -543,16 +545,6 @@
     "\n",
     "How the performance changes? Why do you think it is?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "q1AIFOMaywHP",
-   "metadata": {
-    "id": "q1AIFOMaywHP"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
