fix import statement

--- a/day_3/day_3c.ipynb
+++ b/day_3/day_3c.ipynb
@@ -73,9 +73,12 @@
     "\n",
     "    !pip -q install transformers datasets evaluate accelerate peft\n",
     "\n",
+    "    # Change working directory\n",
+    "    %cd /content/drive/MyDrive/LLM4BeSci_Ljubljana2026/day_3\n",
+    "\n",
     "import pandas as pd\n",
     "from datasets import Dataset\n",
-    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification, TrainingArguments, Trainer, DataCollatorWithPadding\n",
     "from peft import LoraConfig, get_peft_model, TaskType\n",
     "import evaluate"
    ]
@@ -334,8 +337,6 @@
    },
    "outputs": [],
    "source": [
-    "from transformers import TrainingArguments, Trainer, DataCollatorWithPadding\n",
-    "\n",
     "# Training Arguments\n",
     "training_args = TrainingArguments(\n",
     "    output_dir=\"./lora_miniLM_b\",\n",
