--- a/day_4/day_4a.ipynb
+++ b/day_4/day_4a.ipynb
@@ -112,7 +112,7 @@
    "source": [
     "torch.random.manual_seed(42) # Set seed for reproducibility\n",
     "\n",
-    "access_token = '<your access token here>'\n",
+    "access_token = 'your access token here'\n",
     "\n",
     "# Load the model\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
