--- a/day_5/day_5.ipynb
+++ b/day_5/day_5.ipynb
@@ -121,7 +121,7 @@
    "source": [
     "torch.random.manual_seed(42) # For reproducibility\n",
     "\n",
-    "access_token = '<your access token here>'\n",
+    "access_token = 'your access token here'\n",
     "\n",
     "# Load the model\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
