update with newer justaism paper version

--- a/day_5/day_5.ipynb
+++ b/day_5/day_5.ipynb
@@ -124,19 +124,20 @@
     "access_token = 'your access token here'\n",
     "\n",
     "# Load the model\n",
+    "model_ckpt = \"meta-llama/Llama-3.2-3B-Instruct\"\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
-    "    \"meta-llama/Llama-3.2-3B-Instruct\",\n",
+    "    model_ckpt,\n",
     "    device_map=\"cuda\", # Use GPU\n",
     "    torch_dtype=torch.float16, # Use half-precision\n",
     "    trust_remote_code=True,\n",
     "    attn_implementation='eager', # For faster inference on T4 GPUs\n",
-    "    use_auth_token=access_token\n",
+    "    token=access_token\n",
     ")\n",
     "\n",
     "# Load the tokenizer\n",
     "tokenizer = AutoTokenizer.from_pretrained(\n",
-    "    \"meta-llama/Llama-3.2-3B-Instruct\",\n",
-    "    use_auth_token=access_token,\n",
+    "    model_ckpt,\n",
+    "    token=access_token,\n",
     ")"
    ],
    "metadata": {
@@ -435,7 +436,7 @@
     "\n",
     "**TASK 2**: Try tweaking the prompt to the unsatisfactory response to see if you can get a better response. \n",
     "\n",
-    "**TASK 3 (BONUS)**: Experiment with adding a `\"system\"` role (e.g. `{\"role\": \"system\", \"content\": \"You are a model trained to extract information accurately from scientific papers.\"}`) to the prompt and see how it affects the model's responses. Can you improve the quality by tweaking the `\"system\"` role's content?"
+    "**TASK 3**: Experiment with adding a `\"system\"` role (e.g. `{\"role\": \"system\", \"content\": \"You are a model trained to extract information accurately from scientific papers.\"}`) to the prompt and see how it affects the model's responses. Can you improve the quality by tweaking the `\"system\"` role's content?"
    ],
    "metadata": {
     "collapsed": false,
@@ -505,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "source": "As you can see, the response relatively accurate, though it sometimes misrepresents Ilya's views. For instance, whilst Ilya does mention \"regulation\", he does not do so in the context of the second challenge, which is a bit harder to summarise in a single word. In the next prompt, we will try to guide the model to focus on key sentences that illustrate Ilya's stance on AI safety to reduce the risk of misrepresentation:",
+   "source": "As you can see, the response is relatively accurate, though it sometimes misrepresents Ilya's views. For instance, whilst Ilya does mention \"regulation\", he does not do so in the context of the second challenge, which is a bit harder to summarise in a single word. In the next prompt, we will try to guide the model to focus on key sentences that illustrate Ilya's stance on AI safety to reduce the risk of misrepresentation:",
    "metadata": {
     "collapsed": false
    },
@@ -552,7 +553,7 @@
    "cell_type": "markdown",
    "source": [
     "\n",
-    "**TASK 1**: Now prompt the model in the code block below to pretend that it is Ilya based on the interview transcript and ask it some completely unrelated and absurd questions. What kind of responses do you get?"
+    "**TASK 4**: Now prompt the model in the code block below to pretend that it is Ilya based on the interview transcript and ask it some completely unrelated and absurd questions. What kind of responses do you get?"
    ],
    "metadata": {
     "collapsed": false
@@ -575,9 +576,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**TASK 2**: Try tweaking the `\"temperature\"` parameter in the `generation_args` dictionary to see how it affects the generated text (you will need to uncomment it first). Does it improve the quality of the response for TASK 1?  \n",
+    "**TASK 5**: Try tweaking the `\"temperature\"` parameter in the `generation_args` dictionary to see how it affects the generated text (you will need to change to `\"do_sample\"=True` as well). Does it improve the quality of the response?\n",
     "\n",
-    "**TASK 3 (BONUS)**: Read up on some [additional parameters](https://huggingface.co/docs/transformers/en/main_classes/text_generation) in (e.g., `num_beams`, `top_k`, `top_p`) and experiment with them to see how they affect the generated text."
+    "**BONUS TASK**: Read up on some [additional parameters](https://huggingface.co/docs/transformers/en/main_classes/text_generation) in (e.g., `num_beams`, `top_k`, `top_p`) and experiment with them to see how they affect the generated text."
    ],
    "metadata": {
     "collapsed": false
